@@ -130,8 +130,10 @@ This directory contains some examples, which demonstrate how to use JSch
 - KeyGen.java
   This progam will demonstrate the DSA keypair generation. 
   $ CLASSPATH=.:../src javac KeyGen.java
-  $ CLASSPATH=.:../src java KeyGen output_keyfile comment
+  $ CLASSPATH=.:../src java KeyGen rsa output_keyfile comment
+or
+  $ CLASSPATH=.:../src java KeyGen dsa output_keyfile comment
   You will be asked a passphrase for output_keyfile.
-  If everything works fine, you will get the DSA keypair, 
+  If everything works fine, you will get the DSA or RSA keypair, 
   output_keyfile and output_keyfile+".pub".
   The private key and public key are in the OpenSSH format.
