@@ -147,31 +147,7 @@ public abstract class KeyExchange{
       hash=(HASH)(c.newInstance());
     }
     catch(Exception e){ System.err.println("getFingerPrint: "+e); }
-    return getFingerPrint(hash, getHostKey());
-  }
-
-  private static String[] chars={
-    "0","1","2","3","4","5","6","7","8","9", "a","b","c","d","e","f"
-  };
-  private static String getFingerPrint(HASH hash, byte[] data){
-    try{
-      hash.init();
-      hash.update(data, 0, data.length);
-      byte[] foo=hash.digest();
-      StringBuffer sb=new StringBuffer();
-      int bar;
-      for(int i=0; i<foo.length;i++){
-        bar=foo[i]&0xff;
-        sb.append(chars[(bar>>>4)&0xf]);
-        sb.append(chars[(bar)&0xf]);
-        if(i+1<foo.length)
-          sb.append(":");
-      }
-      return sb.toString();
-    }
-    catch(Exception e){
-      return "???";
-    }
+    return Util.getFingerPrint(hash, getHostKey());
   }
   byte[] getK(){ return K; }
   byte[] getH(){ return H; }
